Fix connections for subsequent errors