@@ -5,42 +5,42 @@ import crypto.analysis.AnalysisSeedWithSpecification;
 import crypto.analysis.HiddenPredicate;
 import crypto.analysis.RequiredCrySLPredicate;
 import crysl.rule.CrySLPredicate;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
+import java.util.List;
+import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
  * Creates {@link RequiredPredicateError} for all Required Predicate error generates
  * RequiredPredicateError
  */
-public class RequiredPredicateError extends AbstractRequiresError {
+public class RequiredPredicateError extends AbstractConstraintsError {
 
-    private final Collection<HiddenPredicate> hiddenPredicates;
     private final Collection<CrySLPredicate> contradictedPredicates;
+    private final Collection<HiddenPredicate> hiddenPredicates;
     private final int paramIndex;
 
     public RequiredPredicateError(
-            AnalysisSeedWithSpecification seed, RequiredCrySLPredicate violatedPred) {
+            AnalysisSeedWithSpecification seed,
+            RequiredCrySLPredicate violatedPred,
+            Collection<HiddenPredicate> hiddenPredicates) {
         super(seed, violatedPred.getLocation(), seed.getSpecification());
 
-        this.hiddenPredicates = new HashSet<>();
-        this.contradictedPredicates = Collections.singletonList(violatedPred.getPred());
+        this.hiddenPredicates = Set.copyOf(hiddenPredicates);
+        this.contradictedPredicates = List.of(violatedPred.getPred());
         this.paramIndex = violatedPred.getParamIndex();
     }
 
     public RequiredPredicateError(
-            AnalysisSeedWithSpecification seed, AlternativeReqPredicate violatedPred) {
+            AnalysisSeedWithSpecification seed,
+            AlternativeReqPredicate violatedPred,
+            Collection<HiddenPredicate> hiddenPredicates) {
         super(seed, violatedPred.getLocation(), seed.getSpecification());
 
-        this.hiddenPredicates = new HashSet<>();
-        this.contradictedPredicates = violatedPred.getAlternatives();
+        this.hiddenPredicates = Set.copyOf(hiddenPredicates);
+        this.contradictedPredicates = List.copyOf(violatedPred.getAlternatives());
         this.paramIndex = violatedPred.getParamIndex();
-    }
-
-    public void addHiddenPredicates(Collection<HiddenPredicate> hiddenPredicates) {
-        this.hiddenPredicates.addAll(hiddenPredicates);
     }
 
     public void mapPrecedingErrors() {
@@ -51,11 +51,6 @@ public class RequiredPredicateError extends AbstractRequiresError {
         }
     }
 
-    /**
-     * This method returns a list of contradicting predicates
-     *
-     * @return list of contradicting predicates
-     */
     public Collection<CrySLPredicate> getContradictedPredicates() {
         return contradictedPredicates;
     }
@@ -85,64 +80,30 @@ public class RequiredPredicateError extends AbstractRequiresError {
     }
 
     private String getParamIndexAsText() {
-        String res;
-        switch (paramIndex) {
-            case -1:
-                return "Return value";
-            case 0:
-                res = "First ";
-                break;
-            case 1:
-                res = "Second ";
-                break;
-            case 2:
-                res = "Third ";
-                break;
-            case 3:
-                res = "Fourth ";
-                break;
-            case 4:
-                res = "Fifth ";
-                break;
-            case 5:
-                res = "Sixth ";
-                break;
-            default:
-                res = (paramIndex + 1) + "th ";
-                break;
-        }
-        res += "parameter";
-        return res;
+        return switch (paramIndex) {
+            case -1 -> "Return value";
+            case 0 -> "First parameter";
+            case 1 -> "Second parameter";
+            case 2 -> "Third parameter";
+            case 3 -> "Fourth parameter";
+            case 4 -> "Fifth parameter";
+            case 5 -> "Sixth parameter";
+            default -> (paramIndex + 1) + "th parameter";
+        };
     }
 
     @Override
     public int hashCode() {
-        return Arrays.hashCode(
-                new Object[] {
-                    super.hashCode(), hiddenPredicates, contradictedPredicates, paramIndex
-                });
+        return Objects.hash(super.hashCode(), hiddenPredicates, contradictedPredicates, paramIndex);
     }
 
     @Override
     public boolean equals(Object obj) {
-        if (this == obj) return true;
-        if (!super.equals(obj)) return false;
-        if (getClass() != obj.getClass()) return false;
-
-        RequiredPredicateError other = (RequiredPredicateError) obj;
-        if (hiddenPredicates == null) {
-            if (other.getHiddenPredicates() != null) return false;
-        } else if (!hiddenPredicates.equals(other.hiddenPredicates)) {
-            return false;
-        }
-
-        if (contradictedPredicates == null) {
-            if (other.getContradictedPredicates() != null) return false;
-        } else if (!contradictedPredicates.equals(other.getContradictedPredicates())) {
-            return false;
-        }
-
-        return paramIndex == other.getParamIndex();
+        return super.equals(obj)
+                && obj instanceof RequiredPredicateError other
+                && Objects.equals(contradictedPredicates, other.getContradictedPredicates())
+                && Objects.equals(hiddenPredicates, other.getHiddenPredicates())
+                && paramIndex == other.getParamIndex();
     }
 
     @Override
